--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
